# ml-book-store

./: .gitignore
backend/: Pipfile  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
backend/author/: admin.py  models.py  serializers.py  urls.py
backend/author/migrations/: 0001_initial.py  0002_auto_20200422_1622.py  0002_auto_20200430_1543.py  0003_auto_20200422_1624.py  0003_auto_20200430_1833.py  0004_auto_20200422_1801.py  0005_auto_20200430_0140.py
backend/book/: admin.py  admin_actions.py  api.py  models.py  serializers.py  urls.py  views.py
backend/book/custom_admin/: admin_actions.py
backend/book/migrations/: 0001_initial.py  0002_auto_20200420_1419.py  0002_book_categories.py  0003_auto_20200430_1543.py  0003_remove_book_authors.py  0004_auto_20200421_0108.py  0004_auto_20200430_1839.py  0005_auto_20200422_1618.py  0005_auto_20200430_1844.py  0006_auto_20200422_1648.py  0006_book_pages.py  0007_auto_20200422_1806.py  0007_auto_20200430_2222.py  0008_auto_20200501_0046.py  0008_book_language.py  0009_auto_20200430_0133.py  0009_auto_20200501_1743.py  0010_auto_20200501_1803.py  0011_book_raters.py  0012_book_avg_ratings.py  0013_auto_20200521_0321.py
backend/book_store/: settings.py  urls.py
backend/category/: admin.py  api.py  models.py  serializers.py  tests.py  urls.py
backend/category/migrations/: 0001_initial.py  0002_auto_20200420_1419.py  (+4 more)
backend/core/: jobs.py  models.py  redis.py
backend/docker/: Dockerfile.app  Dockerfile.nginx
backend/users/: admin.py  api.py  forms.py  models.py  serializers.py  urls.py
(+64 files in other folders)
